fix for left-nav alignment on iPhone 6+

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -41,7 +41,8 @@ body.product-catalog {
 }
 
 .navmenu-fixed-left {
-  top: 90px;
+  top: 159px;
+  height: 100%;
 }
 
 .nav li > a:focus {
@@ -101,7 +102,6 @@ body.product-catalog {
 
 .navmenu {
   border: none;
-  padding-top: 50px;
 }
 
 .navbar {
